--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"publish": "npm run build && npm run export"
+		"publish": "next build && next export"
 	},
 	"dependencies": {
 		"@types/node": "18.15.11",
