--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
 		"@types/node": "18.15.11",
 		"@types/react": "18.0.31",
 		"@types/react-dom": "18.0.11",
+		"@web3-onboard/injected-wallets": "^2.8.3",
+		"@web3-onboard/react": "^2.7.0",
 		"eslint": "8.37.0",
 		"eslint-config-next": "13.2.4",
+		"ethers": "^6.2.3",
 		"next": "13.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
