--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 		"@types/react": "18.0.31",
 		"@types/react-dom": "18.0.11",
 		"@web3-onboard/injected-wallets": "^2.8.3",
+		"@web3-onboard/ledger": "^2.4.3",
 		"@web3-onboard/react": "^2.7.0",
+		"@web3-onboard/trezor": "^2.3.4",
+		"@web3-onboard/walletconnect": "^2.3.3",
 		"eslint": "8.37.0",
 		"eslint-config-next": "13.2.4",
 		"ethers": "^6.2.3",
